Redo page structure, fix content overflowing when applying padding by switching to border-box

--- a/style.css
+++ b/style.css
@@ -4,120 +4,51 @@
 }
 
 html, body {
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    font-family: roboto-font;
+    margin: 0; 
+    height: 100%; 
 }
 
 .container {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 8fr;
+    grid-template-rows: 1fr 6fr;
 }
 
 .sidebar {
-    background-color: steelblue;
-    grid-column: 1/1;
-    grid-row: 1/3;
+    box-sizing: border-box;
     height: 100%;
-}
-
-.sidebar-container {
+    background-color: #0ea5e9;
     display: grid;
-    height: 55%;
-    grid-template-rows: 1fr 3fr 2fr;
-}
-
-.sidebar-container > div > h1,h3 {
-    color: white;
-    text-align: center;
-}
-
-.header {
-    background-color: white;
-    grid-column: 2/3;
-    grid-row: 1/1;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-}
-
-.name-row, .search-row {
-    display: grid;
-}
-
-.search-row {
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr;
-}
-
-.name-row {
-    grid-template-columns: 1fr 2fr;
+    grid-row: 1/3;
 }
 
 .main-content {
-    padding: 2%; 
-    background-color: #e2e8f0;
-    grid-column: 2/2;
-    grid-row: 2/2;
+    box-sizing: border-box;
+    height: 100%;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-color: #e2e8f0;
+    padding: 4% 2% 3% 2%;
 }
 
-.announcements-trending, .card-section {
+.header {
+    box-sizing: border-box;
+    height: 100%;
     display: grid;
+    grid-row: 1/1;
+    grid-column: 2/2;
+}
+
+.projects-section {
+    height: 100%;
+    background-color: red;
 }
 
 .announcements-trending {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-}
-
-.card-section {
-    display: grid;
-    grid-template-rows: 1fr 20fr;
-}
-
-.cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(auto-fit, 1fr);
-}
-
-.project-card {
-    display: grid;
-    align-self: start;
-    height: 80%;
-    width: 90%;
-    background-color: white;
-}
-
-.update-card {
-    display: grid;
-    grid-template-rows: 1fr 10fr;
-}
-
-.announcement-card {
-    border-radius: 1%;
-    display: grid;
-    height: 90%;
-    width: 100%;
-    background-color: white;
-    grid-template-rows: repeat(3, 1fr);
-}
-
-.announcement-card > div > h3 {
-    color: black;
-}
-
-.trending-card {
-    display: grid;
-    border-radius: 1%;
-    background-color: white;
-    height: 90%;
-    width: 100%;
-    grid-template-rows: repeat(4, 1fr);
+    height: 100%;
+    background-color: green;
 }
